Resources/Public/Stylesheets/main.css
/* ... */
table.tablesorter thead tr .headerSortUp	{ background-image: url('../Images/featured_sortable_asc.png'); }
table.tablesorter thead tr .headerSortDown	{ background-image: url('../Images/featured_sortable_desc.png'); }

.small-column			{ width: 25px; }
table.no-borders td { border: none; }

/* Helpers
------------------------------ */
.a-l 		{ text-align: left; }
.a-c 		{ text-align: center; }
.a-r 		{ text-align: right; }

.p .f-l 	{ float: left; }
.p .f-r 	{ float: right; }

.hide 		{ display: none; }
.show 		{ display: block; }

.n-m 		{ margin: 0!important; }
.n-p 		{ padding: 0!important; }
.n-b 		{ background: none!important; }

.cc 		{ clear: both; }
.b-wi:after,
.cl:after 	{ content: ""; display: block; height: 0; clear: both; visibility: hidden; }

/* Stucture
------------------------------ */
.p 			{ width:981px; margin:0 auto; position:relative; padding-top:130px; background: #ffffff;}
.page-home .p {
    background: none repeat scroll 0 0 transparent;
}
.s 			{ padding: 22px 28px 0 33px; overflow: hidden; }
.s-sidebar	{ float: right; width: 166px;  padding: 0 0 0 27px; min-height: 1px; }
.s-body		{ overflow: hidden; padding-right: 20px; }
.a 			{ }
.h 			{ height:130px; position:absolute; top:0; left:0; width:981px; z-index: 10; background: transparent; }
.f 			{ min-height:100px; background:#fbfbfb url(../Images/shadow-footer.jpg) no-repeat center 0; font-size: 11px; color: #8c8c8c; }
.f-body		{ width: 981px; margin: 0 auto; position: relative; padding: 29px 0 40px 0; }
.f-body > p,
.f-body > div { padding-left: 20px; }
.f .g		{  }
.f .g-5:first-child { width: 53%; }
.f .g-5		{ width: 47%; }
.f .g-5:first-child > .gc { padding-right: 45px; }
.f .gc		{ padding-left: 45px; }
.f p		{ margin: 0 0 14px 0; }
.c 			{ min-height:500px; position: relative; z-index: 0; padding-bottom: 40px; }
.bodxy-template .c { border: 0px none; }


/* Block with image
------------------------------ */

.b-wi				{ }
.b-wi-pic			{ float: left; margin-right: 10px; }
.b-wi-pic img		{ display: block; margin-bottom: 10px }
.b-wi-r .b-wi-pic	{ float: right; margin: 0 0 0 10px; }
.b-wi-text			{ overflow: auto; }
.d .img-info		{ color: #b3b3b3; font-size: 11px; line-height: 14px; }

/* Keyvisual
--------------------------------------- */

.b-keyvisual		{ margin: 0 0 14px 0; }
.b-keyvisual img	{ display: block; }

/* Buttons
------------------------------ */
#page .bu	{ height: 23px; color: #FFF; line-height: 23px; font-size: 11px; background: transparent url(../Images/s-buttons.png) no-repeat 0 0; padding: 0 12px; cursor: pointer; text-decoration: none; display: inline-block; vertical-align: middle; border: 1px solid #E97E0D; -o-user-select: none; -webkit-user-select: none; -moz-user-select: -moz-none; -khtml-user-select: none; -ms-user-select: none; user-select: none; }
.bu div		{ display: none; }
#page .dark-grey		{ background: url(../Images/dark-grey.png) repeat-x 0 0; border-color: #8b8b8b; }
#page .dark-grey		{ background: url(../Images/dark-grey.png) repeat-x 0 0; border-color: #8b8b8b; }

.bu .i-arr-down			{ margin: 0 -5px -3px 2px; }

.bu:hover,
.bu:hover span,
	button:hover .bu,
	button:hover .bu span{ text-decoration:none; background-position: 0 -32px; }
.bu:hover span,
	button:hover .bu span{ text-decoration:none;}

.bu::-moz-focus-inner,
button::-moz-focus-inner,
input::-moz-focus-inner 		{ padding: 0; border: none; }

#page .bu-mini	{ height: 19px; line-height: 20px; padding: 0 8px; }


/* Header elements
------------------------------ */
#logo 			{ font-family: 'Share-Regular'; text-decoration:none; display:block; position: absolute; left: 11px; top: 44px; }
#logo img		{ }
a#logo			{ font-size: 30px; color: #515151; }
.con-data			{ position: absolute; left: 305px; top: 30px; font-size: 13px; color: #5c5c5c; line-height: 13px; }
.con-data strong	{ font-weight: normal; font-size: 15px; color: #202020; line-height: 23px; }

.h-bar			{ position: absolute; top: 52px; right: 0; z-index: 200; font-size: 11px; }

.h-bar-search						{ display: inline-block; border: 1px solid #dbdbdb; height: 21px; background: url(../Images/s-buttons.png) repeat-x 0 -94px; }
.h-bar-search-input					{ width: 169px; display: inline-block; background: url(../Images/i-arrows.png) no-repeat -1023px -355px; }
.h-bar-search-input	input			{ background: none; border: none; vertical-align: top; width: 141px; padding: 4px 24px 3px 24px; }
.h-bar-search-submit				{ width: 23px; height: 23px; margin: -1px; background: url(../Images/featured.png); vertical-align: top; border: 1px solid #515151; position: relative; }
.h-bar-search-submit .ico			{ position: absolute; left: 8px; top: 7px; }
.gecko .h-bar-search-submit .ico	{ top: -5px; }
.extensions							{ float: right; }
.extensions .h-bar-search-submit	{ background-image: url(../Images/dark-grey.png); border-color: #8b8b8b; }

.h-bar-nav					{ position: absolute; right: 0px; top: -2px; width: 400px; text-align: right; }
.h-bar-nav > li				{ display: inline-block; position: relative; background: url(../Images/h-bar-nav-li.png) no-repeat 0 9px; text-align: left; margin-left: -1px; }
.h-bar-nav > li:first-child	{ background: #ffffff; }
.h-bar-nav > li > a			{ text-decoration: none; display: block; }
.h-bar-nav a				{ color: #515151; }

.b-drop-h					{ height: 27px; border: 1px solid transparent; border-bottom: 0; display: block; padding: 4px 11px 0 11px; position: relative; z-index: 11; }
.b-drop-h-l,
.b-drop-h-r					{ height: 27px; position: absolute; z-index: 11; width: 2px; height: 31px; background: url(../Images/b-drop-h.png) no-repeat; top: -1px; display: none; }
.b-drop-h-l					{ left: -3px; }
.b-drop-h-r					{ right: -3px; background-position: -2px 0; }
.b-drop-h .ico				{ margin: 0 0 0 6px; }
.h-bar-nav > li .b-drop-h	{ background: #fff; border: 1px solid #e3e3e3; }
.h-bar-nav > li:hover .b-drop-h { background: #fff; border-color: #e3e3e3; border-bottom: 0; }
/* ... */

